--- a/index.html
+++ b/index.html
@@ -17,30 +17,34 @@
           /></a>
         </div>
     </header>
-          <nav>
-          <ul id="navigation">
-            <li class="selected"><a href="index.html">Home</a></li>
-            <li class="menu"></li><a href="about.html">Wellness</a>
-              <ul class="primary">
-                <li>
-                  <a href="product.html">Dimensions </a>
-                </li>
-              </ul>
-            </li>
-            <li class="menu">
-              <a href="blog.html">Tips & Tricks</a>
-              <ul class="secondary">
-                <li>
-                  <a href="singlepost.html">4 steps for a better life</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href=""></a>
-            </li>
-          </ul>
-          </nav>
     
+    <!-- nav bar -->
+          <nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Wellness</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Tips and Tricks</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+    <!-- navbar ends -->
+
       <div id="body" class="home">
         <div class="header">
           <img src="images/health-and-wellness-program 1.png" alt="" />
