--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
                       <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Wellness</a>
-                    </li>
-                    <li class="nav-item">
                       <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Tips and Tricks</a>
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                   </ul>
                 </div>
               </div>
+            </nav>
             </nav>
     <!-- navbar ends -->
 
