--- a/index.html
+++ b/index.html
@@ -19,31 +19,26 @@
     </header>
     
     <!-- nav bar -->
-          <nav>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            </nav>
+    <nav class="navbar fixed-top navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">WELLNESS</a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACTS</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <!-- navbar ends -->
 
       <div id="body" class="home">
@@ -91,18 +86,15 @@
           </div>
         </div>
       </div>
-      <div id="footer">
-        <div>
-          <div class="connect">
+            <footer>
+              <nav class="navbar fixed-bottom navbar-light bg-light">
             <a href="" class="facebook">facebook</a>
             <a href="" class="twitter">twitter</a>
             <a href="" class="googleplus">googleplus</a>
             <a href="" class="pinterest">pinterest</a>
-          </div>
-          <p>&copy; 2022 Wellness. All Rights Reserved.</p>
-        </div>
-      </div>
-    </div>
+              <p>Wellness page, Copyright &copy;2022</p>  
+              </nav>  
+            </footer>
     <script src="js/mobile.js" type="text/javascript"></script>
   </body>
 </html>
