--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p>
                 Before diving into how we can put more wellness into our lives,
                 let’s talk about what we mean when we say it. Wellness,
-                wellbeing, self-care –– however you choose to put it –– is more
+                wellbeing, self-care, however you choose to put it is more
                 than a daily trip to the gym or a healthier lunch.
               </p>
             </div>
